# sheetwork

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  RELEASING.md  _old_changelog.md  codecov.yml  dev-pip-requirements.txt  dev-pip-requirements_backup.txt  dev-requirements.txt  google_sheetkey.txt  pip-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py  sheets.yml  sheetwork_project.yml  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: app_ci.yml  issue.yml  pr_lint.yml  pythonapp.yml  tox_suite.yml  whitespace_linter.yml
changelog/: 150.fix.rst  151.feature.rst  154.misc.rst  155.fix.rst  156.feature.rst  161.misc.rst  163.misc.rst  169.feature.rst  171.misc.rst  173.misc.rst  193.misc.rst  195.feature.rst  206.fix.rst  207.misc.rst  208.misc.rst  210.misc.rst  215.misc.rst  218.misc.rst  221.fix.rst  229.misc.rst  231.feature.rst  252.fix.rst  253.feature.rst  257.feature.rst  262.feature.rst  265.feature.rst  282.feature.rst  290.fix.rst  295.misc.rst  306.misc.rst  314.feature.md  314.feature.rst  317.misc.md  317.misc.rst  323.fix.rst  372.feature.md  CHANGELOG.rst  README.md  _template.rst
core/: _version.py  cleaner.py  config.py  exceptions.py  flags.py  logger.py  main.py  sheetload.py  sheetwork.py  utils.py  yaml_helpers.py  yaml_schema.py
core/adapters/: connection.py  factory.py  impl.py
core/adapters/base/: connection.py  impl.py
core/clients/: google.py  system.py
core/config/: config.py  profile.py  project.py
core/task/: init.py
core/ui/: colours.py  printer.py
core/yaml/: yaml_helpers.py  yaml_schema.py
coverage-reports/: coverage.cov  coverage.xml
dummy/: sheetwork_project.yml
sheetload/: _version.py  cleaner.py  config.py  exceptions.py  flags.py  sheetload.py  yaml_helpers.py  yaml_schema.py
sheetwork/: __init__.py
sheetwork/core/: _version.py  cleaner.py  exceptions.py  flags.py  logger.py  main.py  sheetwork.py  utils.py
sheetwork/core/adapters/: connection.py  factory.py  impl.py
sheetwork/core/adapters/base/: connection.py  impl.py
sheetwork/core/adapters/postgres/: connection.py  impl.py
sheetwork/core/adapters/snowflake/: connection.py  impl.py
sheetwork/core/clients/: google.py  system.py
sheetwork/core/config/: config.py  profile.py  project.py
sheetwork/core/task/: init.py
sheetwork/core/ui/: colours.py  printer.py  traceback_manager.py
sheetwork/core/yaml/: yaml_helpers.py  yaml_schema.py
tests/: __init__.py  base_connection_test.py  base_impl_test.py  clean_df.json  cleanups_test.py  config_test.py  factory_test.py  flags_test.py  google_test.py  gspread_test.py  init_test.py  main_test.py  mockers.py  postgres_adaptor_test.py  printer_test.py  profile_test.py  profiles.yml  project_test.py  sheetload_project.yml  sheetloader_test.py  sheets.yml  sheetwork_project.yml  sheetwork_project_all_create.yml  sheetwork_project_deprecated.yml  system_test.py  test_cleanups.py  test_configloader.py  test_impl.py  test_profile.py  test_project.py  test_sheetloader.py  test_utils.py  utils_test.py
tests/docker_postgres/: docker-compose.yml  seed_db.sql
