[tool.poetry]
name = "sheetwork"
version = "1.0.6"
description = "A handy CLI tool to ingest GoogleSheets into your database without writing a single line of code"
authors = ["Bastien Boutonnet <bastien.b1@gmail.com>"]
maintainers = ["Bastien Boutonnet <bastien.b1@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
documentation = "https://bitpicky.gitbook.io/sheetwork/"
repository = "https://github.com/bastienboutonnet/sheetwork"
homepage = "https://github.com/bastienboutonnet/sheetwork"
keywords = ["googlesheets", "snowflake", "cli", "ingest", "data engineering"]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
requests = "<2.23.0"
gspread = "^3.6"
sqlalchemy = "^1.3.19"
cerberus = "^1.3.2"
pandas = "~1.1.5"
pyyaml = "^5.3.1"
snowflake-sqlalchemy = "^1"
oauth2client = "^4.1.3"
inflection = "^0.5.1"
colorama = "^0.4.3"
luddite = "^1.0.1"
packaging = "^20.4"
retrying = "^1.3.3"
pretty-errors = "^1.2.19"

[tool.poetry.dev-dependencies]
bumpversion = "^0.6.0"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
mock = "^4.0.3"
mypy = "^0.790"
codecov = "^2.1.11"
coverage = "^5.3"
pytest-mock = "^3.4.0"
pytest-datafiles = "^2.0"
towncrier = "^19.2.0"
pytest-sugar = "^0.9.4"
pytest-instafail = "^0.4.2"
tox-poetry-installer = "^0.6.1"
tox = "^3.21.0"
pre-commit = "^2.9.3"

[tool.poetry.extras]
test = ["pytest", "tox"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sheetwork= "sheetwork.core.main:main"


[tool.towncrier]
package = "sheetwork"
package_dir = "sheetwork/"
directory = "changelog/"
filename = "changelog/CHANGELOG.rst"
title_format = "sheetwork {version} ({project_date})"
template = "changelog/_template.rst"

    [[tool.towncrier.type]]
    directory = "fix"
    name = "Bug Fixes"
    showcontent = true


    [[tool.towncrier.type]]
    directory = "feature"
    name = "Features"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "misc"
    name = "Under The Hood/Misc"
    showcontent = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = {py3611,py37,py38}-{cover,nocov}-{linux,windows}
isolated_build=true
requires =
    tox-poetry-dev-dependencies
    tox-wheel

[gh-actions]
python =
    3.8: py38
    3.6: py3611
    3.7: py37

[gh-actions:env]
PLATFORM =
    ubuntu-latest: linux
    windows-latest: windows

[testenv]
poetry_experimental_add_locked_dependencies = True
poetry_add_dev_dependencies = True
wheel =
    cover: false
    nocover: true
setenv =
    APPDATA = "''"
whitelist_externals = echo
commands =
    echo {env:APPDATA}
    pytest

[testenv:package]
skip_install = True
deps =
    twine
commands =
    python3 -m poetry build
    python3 -m twine check dist/*
"""
