[tool.poetry]
name = "sheetwork"
version = "1.0.7"
description = "A handy CLI tool to ingest GoogleSheets into your database without writing a single line of code"
authors = ["Bastien Boutonnet <bastien.b1@gmail.com>"]
maintainers = ["Bastien Boutonnet <bastien.b1@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
documentation = "https://bitpicky.gitbook.io/sheetwork/"
repository = "https://github.com/bastienboutonnet/sheetwork"
homepage = "https://github.com/bastienboutonnet/sheetwork"
keywords = ["googlesheets", "snowflake", "cli", "ingest", "data engineering"]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
requests = "<2.23.0"
gspread = ">=3.6,<6.0"
sqlalchemy = "^1.3.19"
cerberus = "^1.3.2"
pandas = "~1.1.5"
pyyaml = "^5.3.1"
snowflake-sqlalchemy = "^1"
oauth2client = "^4.1.3"
inflection = "^0.5.1"
colorama = "^0.4.3"
luddite = "^1.0.1"
packaging = ">=20.4,<22.0"
retrying = "^1.3.3"
pretty-errors = "^1.2.19"
pydantic = "^1.7.3"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
bumpversion = "^0.6.0"
pytest = "^6.2.3"
pytest-cov = "^3.0.0"
mock = "^4.0.3"
mypy = "^0.812"
codecov = "^2.1.11"
coverage = "^5.5"
pytest-mock = "^3.6.0"
pytest-datafiles = "^2.0"
towncrier = "^21.3.0"
pytest-sugar = "^0.9.4"
pytest-instafail = "^0.4.2"
tox-poetry-installer = "^0.8.0"
tox = "^3.23.1"
pre-commit = "^2.13.0"

[tool.poetry.extras]
test = ["pytest", "tox"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sheetwork= "sheetwork.core.main:main"

[tool.towncrier]
package = "sheetwork"
package_dir = "sheetwork/"
filename = "changelog/CHANGELOG.md"
directory = "changelog/"
start_string = "# Changelog\n"
issue_format = "[#{issue}](https://github.com/bastienboutonnet/sheetwork/issues/{issue})"
underlines = ["", ""]
template = "changelog/.towncrier.template.md"
title_format = "## sheetwork [{version}] - {project_date}"



    [[tool.towncrier.type]]
    directory = "fix"
    name = "Bug Fixes"
    showcontent = true


    [[tool.towncrier.type]]
    directory = "feature"
    name = "Features"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "misc"
    name = "Under The Hood/Misc"
    showcontent = true
